# stackup

./: .env.example  CLAUDE.md  docker-compose.yml
.github/workflows/: discord-pr-notify.yml  lint.yml
ai/: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  pyproject.toml
ai/src/ai_server/: main.py
ai/src/ai_server/config/: settings.py
ai/tests/: test_health.py
backend/: build.gradle
backend/src/main/java/com/stackup/stackup/: StackupApplication.java
backend/src/main/java/com/stackup/stackup/auth/domain/: RefreshToken.java
backend/src/main/java/com/stackup/stackup/common/entity/: BaseSoftDeleteEntity.java  BaseTimeAndUpdateEntity.java  BaseTimeEntity.java
backend/src/main/java/com/stackup/stackup/document/domain/: AnalyzedDocument.java
backend/src/main/java/com/stackup/stackup/github/domain/: GithubRepository.java
backend/src/main/java/com/stackup/stackup/resume/domain/: Resume.java
backend/src/main/java/com/stackup/stackup/session/domain/: InterviewMessage.java  InterviewSession.java  MessageVoiceAnalysis.java  SessionContext.java  SessionFeedback.java
backend/src/main/java/com/stackup/stackup/user/domain/: User.java
backend/src/main/resources/: application.properties
backend/src/test/java/com/stackup/stackup/: StackupApplicationTests.java
frontend/: .prettierrc  eslint.config.js  package-lock.json
frontend/src/shared/lib/AsyncBoundary/: AsyncBoundary.tsx  ErrorBoundary.tsx  index.ts
infra/minio/: init.sh
infra/postgres/: Dockerfile
infra/rabbitmq/: Dockerfile  definitions.json
(+3 files in other folders)
