[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stackup-ai-server"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.2",
    "uvicorn[standard]>=0.42.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "httpx>=0.28.1",
    "aio-pika>=9.6.2",
"boto3>=1.42.77",
    "langchain>=1.2.13",
    "langchain-core>=1.2.22",
    "langchain-community>=0.4.1",
    "structlog>=25.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "black>=26.3.1",
    "flake8>=7.3.0",
    "pylint>=4.0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_server"]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
